[tool.poetry]
name = "hirise-blender"
version = "0.1.0"
description = ""
authors = ["Daniel Cellucci <dwcellucci@gmail.com>"]
readme = "README.md"
packages = [{include = "hirise_blender"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
pytest = "^7.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
